argo/cd/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: gitops
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.$APP_DOMAIN`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          serversTransport: no-verify-tls
    - kind: Rule
      match: Host(`argocd.$APP_DOMAIN`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
          serversTransport: no-verify-tls
